--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
         body { background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%); min-height: 100vh; color: white; font-family: 'Inter', sans-serif; }
         .glass { background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 1rem; }
         .mobby-gradient { background: linear-gradient(90deg, #4facfe 0%, #00f2fe 100%); }
+        /* Smooth scroll for chat */
+        #chatBox { scroll-behavior: smooth; }
     </style>
 </head>
 <body class="p-4 md:p-8">
+
+    <div id="keyModal" class="fixed inset-0 bg-black/80 backdrop-blur-md z-50 hidden flex items-center justify-center p-4">
+        <div class="glass max-w-sm w-full p-8 text-center border-cyan-500/30">
+            <h2 class="text-xl font-bold mb-2 text-cyan-400">Neural Link Required</h2>
+            <p class="text-gray-400 text-sm mb-6">Enter your Groq API Key to enable Mobby's brain. This is stored locally in your browser.</p>
+            <input type="password" id="groqInput" placeholder="gsk_..." class="w-full bg-black/40 border border-white/10 p-3 rounded mb-4 outline-none focus:border-cyan-400 text-center">
+            <button onclick="window.saveKey()" class="w-full mobby-gradient p-3 rounded font-bold hover:opacity-90 transition">Initialize Brain</button>
+            <p class="text-[10px] text-gray-600 mt-4 uppercase tracking-widest">Security Protocol 44-B</p>
+        </div>
+    </div>
 
     <div id="loginScreen" class="max-w-md mx-auto mt-20 p-8 glass text-center">
         <h1 class="text-3xl font-bold mb-6 mobby-gradient bg-clip-text text-transparent">MobbyOS V2</h1>
@@ -20,29 +32,31 @@
         <input type="password" id="password" placeholder="Password" class="w-full bg-black/30 border border-white/10 p-3 rounded mb-6 outline-none focus:border-cyan-400">
         <button onclick="window.authEmail()" class="w-full mobby-gradient p-3 rounded font-bold mb-4 hover:opacity-90 transition">Login / Sign Up</button>
         <div class="text-gray-500 mb-4">OR</div>
-        <button onclick="window.authGoogle()" class="w-full bg-white text-black p-3 rounded font-bold hover:bg-gray-200 transition">Continue with Google</button>
+        <button onclick="window.authGoogle()" class="w-full bg-white text-black p-3 rounded font-bold hover:bg-gray-200 transition text-sm">Continue with Google</button>
     </div>
 
     <div id="appScreen" class="hidden max-w-6xl mx-auto h-[85vh] flex gap-6">
-        <div class="w-64 glass p-6 hidden md:flex flex-col">
-            <h2 class="font-bold text-xl mb-10 mobby-gradient bg-clip-text text-transparent">MOBBY OS</h2>
-            <div class="flex-grow">
-                <button class="w-full text-left p-3 hover:bg-white/5 rounded mb-2">🏠 Dashboard</button>
-                <button class="w-full text-left p-3 hover:bg-white/5 rounded mb-2">💬 History</button>
+        <div class="w-64 glass p-6 hidden md:flex flex-col border-r border-white/5">
+            <h2 class="font-bold text-xl mb-10 mobby-gradient bg-clip-text text-transparent tracking-tighter">MOBBY OS</h2>
+            <div class="flex-grow space-y-2">
+                <button class="w-full text-left p-3 bg-white/5 rounded-xl text-cyan-400 font-medium">🏠 Dashboard</button>
+                <button onclick="window.resetKey()" class="w-full text-left p-3 hover:bg-white/5 rounded-xl text-gray-400 text-sm">🔑 Change API Key</button>
             </div>
-            <button onclick="window.logout()" class="text-gray-400 hover:text-white text-sm">Sign Out</button>
+            <button onclick="window.logout()" class="text-gray-500 hover:text-white text-xs text-left px-3">SIGN OUT</button>
         </div>
 
-        <div class="flex-grow flex flex-col glass p-6">
+        <div class="flex-grow flex flex-col glass p-6 relative">
             <div id="chatBox" class="flex-grow overflow-y-auto space-y-4 mb-6 pr-2">
-                <div class="bg-cyan-500/10 p-4 rounded-lg border border-cyan-500/20">
-                    <p class="text-cyan-400 font-bold">SYSTEM</p>
-                    <p>Welcome back. Neural links active.</p>
+                <div class="bg-cyan-500/10 p-4 rounded-2xl border border-cyan-500/20 max-w-2xl">
+                    <p class="text-cyan-400 text-xs font-bold mb-1">SYSTEM</p>
+                    <p class="text-sm">Neural links active. MobbyOS is ready for commands.</p>
                 </div>
             </div>
-            <div class="flex gap-4">
-                <input type="text" id="userInput" placeholder="Ask Mobby anything..." class="flex-grow bg-black/20 border border-white/10 p-4 rounded-xl outline-none focus:border-cyan-400">
-                <button id="sendBtn" class="mobby-gradient px-8 rounded-xl font-bold">SEND</button>
+            <div class="flex gap-4 items-center">
+                <input type="text" id="userInput" placeholder="Ask Mobby anything..." class="flex-grow bg-black/20 border border-white/10 p-4 rounded-2xl outline-none focus:border-cyan-400 transition-all">
+                <button id="sendBtn" class="mobby-gradient p-4 rounded-2xl font-bold shadow-lg shadow-cyan-500/20 hover:scale-105 active:scale-95 transition">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="black"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" /></svg>
+                </button>
             </div>
         </div>
     </div>
@@ -52,7 +66,6 @@
         import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
         import { getAuth, signInWithPopup, GoogleAuthProvider, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // REPLACE WITH YOUR FIREBASE CONFIG
         const firebaseConfig = {
             apiKey: "YOUR_API_KEY",
             authDomain: "YOUR_PROJECT.firebaseapp.com",
@@ -66,15 +79,32 @@
         const db = getFirestore(app);
         const auth = getAuth(app);
         const provider = new GoogleAuthProvider();
-        const GROQ_API_KEY = "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";
 
         let currentHistory = [];
 
-        // UI Switches
+        // KEY MANAGEMENT
+        window.saveKey = () => {
+            const key = document.getElementById('groqInput').value;
+            if(key.startsWith('gsk_')) {
+                localStorage.setItem('mobby_groq_key', key);
+                document.getElementById('keyModal').classList.add('hidden');
+            } else {
+                alert("Invalid Key Format. Must start with gsk_");
+            }
+        };
+
+        window.resetKey = () => {
+            localStorage.removeItem('mobby_groq_key');
+            document.getElementById('keyModal').classList.remove('hidden');
+        };
+
         onAuthStateChanged(auth, async (user) => {
             if (user) {
                 document.getElementById('loginScreen').classList.add('hidden');
                 document.getElementById('appScreen').classList.remove('hidden');
+                if(!localStorage.getItem('mobby_groq_key')) {
+                    document.getElementById('keyModal').classList.remove('hidden');
+                }
                 loadHistory(user.uid);
             } else {
                 document.getElementById('loginScreen').classList.remove('hidden');
@@ -90,12 +120,12 @@
             try {
                 await signInWithEmailAndPassword(auth, email, pass);
             } catch (e) {
-                await createUserWithEmailAndPassword(auth, email, pass);
+                try { await createUserWithEmailAndPassword(auth, email, pass); }
+                catch (err) { alert(err.message); }
             }
         };
         window.logout = () => signOut(auth);
 
-        // CHAT LOGIC
         async function loadHistory(uid) {
             const docSnap = await getDoc(doc(db, "users", uid));
             if (docSnap.exists()) {
@@ -105,6 +135,9 @@
         }
 
         async function sendMessage() {
+            const apiKey = localStorage.getItem('mobby_groq_key');
+            if(!apiKey) { document.getElementById('keyModal').classList.remove('hidden'); return; }
+
             const input = document.getElementById('userInput');
             const text = input.value.trim();
             if(!text) return;
@@ -113,17 +146,22 @@
             input.value = '';
             renderMessages();
 
-            const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-                method: "POST",
-                headers: { "Authorization": `Bearer ${GROQ_API_KEY}`, "Content-Type": "application/json" },
-                body: JSON.stringify({ model: "llama-3.3-70b-versatile", messages: currentHistory })
-            });
-            const data = await res.json();
-            const reply = data.choices[0].message.content;
+            try {
+                const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+                    method: "POST",
+                    headers: { "Authorization": `Bearer ${apiKey}`, "Content-Type": "application/json" },
+                    body: JSON.stringify({ model: "llama-3.3-70b-versatile", messages: currentHistory })
+                });
+                const data = await res.json();
+                const reply = data.choices[0].message.content;
 
-            currentHistory.push({ role: "assistant", content: reply });
-            renderMessages();
-            await setDoc(doc(db, "users", auth.currentUser.uid), { history: currentHistory });
+                currentHistory.push({ role: "assistant", content: reply });
+                renderMessages();
+                await setDoc(doc(db, "users", auth.currentUser.uid), { history: currentHistory });
+            } catch (err) {
+                console.error(err);
+                alert("Neural Link Error. Check your API key.");
+            }
         }
 
         function renderMessages() {
@@ -133,15 +171,18 @@
                 if(msg.role === 'system') return;
                 const isUser = msg.role === 'user';
                 box.innerHTML += `
-                    <div class="${isUser ? 'ml-12 bg-white/5' : 'mr-12 bg-cyan-500/10'} p-4 rounded-2xl border border-white/5">
-                        <p class="text-xs font-bold mb-1 ${isUser ? 'text-gray-400' : 'text-cyan-400'}">${isUser ? 'YOU' : 'MOBBY'}</p>
-                        <p class="text-sm leading-relaxed">${msg.content}</p>
+                    <div class="flex ${isUser ? 'justify-end' : 'justify-start'} animate-in fade-in slide-in-from-bottom-2 duration-300">
+                        <div class="${isUser ? 'bg-white/10 rounded-2xl rounded-tr-none' : 'bg-cyan-500/10 rounded-2xl rounded-tl-none border border-cyan-500/20'} p-4 max-w-[80%]">
+                            <p class="text-[10px] font-black mb-1 tracking-widest ${isUser ? 'text-gray-500 text-right' : 'text-cyan-500'}">${isUser ? 'USER_ID' : 'MOBBY_CORE'}</p>
+                            <p class="text-sm leading-relaxed">${msg.content}</p>
+                        </div>
                     </div>`;
             });
             box.scrollTop = box.scrollHeight;
         }
 
         document.getElementById('sendBtn').onclick = sendMessage;
+        document.getElementById('userInput').onkeypress = (e) => { if(e.key === 'Enter') sendMessage(); };
     </script>
 </body>
 </html>
