--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
-<body onload="brython({debug:0, cache:true})" class="flex h-screen w-screen overflow-hidden">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MobbyOS V1.1.3 | SIC Corp</title>
+    
+    <script src="https://cdn.tailwindcss.com"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython_stdlib.min.js"></script>
 
-    <div id="boot-screen">
-        <div class="boot-loader mb-6"></div>
-        <div class="text-center">
-            <p class="text-[11px] font-black uppercase tracking-[0.6em] text-sky-400">MobbyOS Core</p>
-            <div id="boot-status" class="text-[8px] text-white/20 mt-2 uppercase tracking-widest italic">Initializing...</div>
-        </div>
-    </div>
+    <style>
+        /* Failsafe: If Tailwind fails, this ensures the screen isn't white */
+        body { background: #010409; color: white; font-family: sans-serif; }
+        #boot-screen { 
+            position: fixed; inset: 0; background: black; z-index: 9999; 
+            display: flex; flex-direction: column; align-items: center; justify-content: center; 
+        }
+    </style>
+</head>
+
+<body onload="brython()" class="bg-[#010409] text-white">
+    ```
+
+---
+
+### 💡 Roy's Pro-Tip for Coding
+Since you mentioned you get angry when the code doesn't work (I totally get it—coding is frustrating!), try this:
+
+1.  **Open your website** on GitHub.
+2.  **Right-click** anywhere on the white screen.
+3.  Click **"Inspect"** and then click the **"Console"** tab at the top.
+4.  If you see **Red Text**, that is the "Secret Map" to the problem. 
+
+**If you copy-paste that red text here, I can tell you exactly which line to change so you don't have to guess. Would you like me to explain how to read those error messages?**
 
     <script type="text/python">
         from browser import document, window, html, timer, ajax
