--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MobbyOS V1.1.3 | SIC Corp</title>
-    
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython_stdlib.min.js"></script>
-
     <style>
         body { background: #010409; color: white; font-family: sans-serif; overflow: hidden; margin: 0; }
         #boot-screen { position: fixed; inset: 0; background: black; z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; transition: opacity 0.3s ease; }
         .boot-loader { width: 30px; height: 30px; border: 2px solid #38bdf822; border-top-color: #38bdf8; border-radius: 50%; animation: spin 0.8s linear infinite; }
         @keyframes spin { to { transform: rotate(360deg); } }
-        /* This prevents Python code from appearing as text if the engine lags */
         script[type="text/python"] { display: none !important; }
+        .hidden { display: none !important; }
     </style>
 </head>
-
 <body onload="brython()">
 
     <div id="boot-screen">
@@ -32,11 +29,12 @@
                 <img id="sidePFP" src="https://i.imgur.com/r6oJp4O.png" class="w-10 h-10 rounded-xl">
                 <div>
                     <p id="sideName" class="text-xs font-bold uppercase">Guest</p>
-                    <p id="userRole" class="text-[8px] text-sky-400 font-bold uppercase tracking-widest">Scanning...</p>
+                    <p id="userRole" class="text-[8px] text-sky-400 font-bold uppercase tracking-widest">Authorized</p>
                 </div>
             </div>
             <nav class="space-y-2 flex-grow">
                 <button id="btn-dash" class="w-full text-left p-3 text-[10px] font-bold uppercase text-white/40 hover:bg-white/5 rounded-xl transition-all">Dashboard</button>
+                <button id="btn-history" class="w-full text-left p-3 text-[10px] font-bold uppercase text-white/40 hover:bg-white/5 rounded-xl transition-all">History</button>
                 <button id="btn-config" class="w-full text-left p-3 text-[10px] font-bold uppercase text-white/40 hover:bg-white/5 rounded-xl transition-all">Settings</button>
             </nav>
             <div class="p-4 bg-white/5 rounded-2xl border border-white/5">
@@ -48,9 +46,16 @@
             </div>
         </aside>
 
-        <main class="flex-grow bg-[#020617] relative">
-            <div id="view-dashboard" class="absolute inset-0 p-20">
-                <h1 id="welcomeMsg" class="text-6xl font-black italic tracking-tighter">MobbyOS</h1>
+        <main class="flex-grow bg-[#020617] relative flex flex-col items-center justify-center">
+            <div id="view-dashboard" class="p-20 text-center">
+                <h1 id="welcomeMsg" class="text-6xl font-black italic tracking-tighter min-h-[80px]"></h1>
+                <p class="text-white/20 uppercase tracking-[1em] text-[10px] mt-4">NexaFlow Neural Link</p>
+            </div>
+            
+            <div class="absolute bottom-10 flex gap-4">
+                <button id="btn-select" class="px-6 py-3 bg-white/5 rounded-full text-[10px] font-bold uppercase border border-white/10 hover:bg-white/10 transition-all">Select</button>
+                <button id="btn-add" class="w-14 h-14 bg-sky-500 rounded-full flex items-center justify-center text-black text-2xl font-bold shadow-lg shadow-sky-500/20 hover:scale-110 transition-all">+</button>
+                <button id="btn-delete" class="px-6 py-3 bg-red-500/10 text-red-500 rounded-full text-[10px] font-bold uppercase border border-red-500/20 hover:bg-red-500/20 transition-all">Delete</button>
             </div>
         </main>
     </div>
@@ -58,13 +63,13 @@
     <div id="configModal" class="fixed inset-0 bg-black/80 backdrop-blur-xl flex items-center justify-center hidden z-[100]">
         <div class="bg-[#0a0a0a] border border-white/10 p-10 rounded-[3rem] w-[400px]">
             <h2 class="text-2xl font-black uppercase italic mb-6">Settings</h2>
-            <input id="cfgName" placeholder="Name" class="w-full bg-white/5 border border-white/10 p-4 rounded-xl mb-4 text-white outline-none">
-            <button id="commitBtn" class="w-full bg-sky-500 text-black font-black p-4 rounded-xl text-xs uppercase">Save</button>
-            <button id="closeConfig" class="w-full text-white/20 text-[10px] mt-4 uppercase font-bold">Close</button>
+            <input id="cfgName" placeholder="Update Display Name" class="w-full bg-white/5 border border-white/10 p-4 rounded-xl mb-4 text-white outline-none focus:border-sky-500">
+            <button id="commitBtn" class="w-full bg-sky-500 text-black font-black p-4 rounded-xl text-xs uppercase mb-3">Save Changes</button>
+            <button id="logoutBtn" class="w-full bg-red-500/10 text-red-500 border border-red-500/20 font-black p-4 rounded-xl text-[10px] uppercase hover:bg-red-500 hover:text-white transition-all">Logout Session</button>
+            <button id="closeConfig" class="w-full text-white/20 text-[10px] mt-4 uppercase font-bold">Close Window</button>
         </div>
     </div>
 
     <script type="text/python" src="engine.py"></script>
-
 </body>
 </html>
