--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython_stdlib.min.js"></script>
     <style>
         body { background: #010409; color: white; font-family: sans-serif; overflow: hidden; margin: 0; }
-        #boot-screen { position: fixed; inset: 0; background: black; z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; transition: opacity 0.3s ease; }
+        #boot-screen, #login-screen { position: fixed; inset: 0; background: black; z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; transition: opacity 0.3s ease; }
+        #login-screen { z-index: 9998; background: #010409; }
         .boot-loader { width: 30px; height: 30px; border: 2px solid #38bdf822; border-top-color: #38bdf8; border-radius: 50%; animation: spin 0.8s linear infinite; }
         @keyframes spin { to { transform: rotate(360deg); } }
-        script[type="text/python"] { display: none !important; }
         .hidden { display: none !important; }
     </style>
 </head>
@@ -21,6 +21,14 @@
     <div id="boot-screen">
         <div class="boot-loader mb-4"></div>
         <p class="text-[10px] tracking-[0.4em] uppercase text-sky-400 font-bold">SIC Turbo Boot</p>
+    </div>
+
+    <div id="login-screen" class="hidden">
+        <div class="w-80 text-center">
+            <h2 class="text-3xl font-black italic mb-6">MobbyOS LOGIN</h2>
+            <input id="loginUser" placeholder="Username" class="w-full bg-white/5 border border-white/10 p-4 rounded-xl mb-3 outline-none focus:border-sky-500">
+            <button id="entryBtn" class="w-full bg-sky-500 text-black font-black p-4 rounded-xl text-xs uppercase">Enter System</button>
+        </div>
     </div>
 
     <div class="flex h-screen w-screen">
@@ -49,13 +57,13 @@
         <main class="flex-grow bg-[#020617] relative flex flex-col items-center justify-center">
             <div id="view-dashboard" class="p-20 text-center">
                 <h1 id="welcomeMsg" class="text-6xl font-black italic tracking-tighter min-h-[80px]"></h1>
-                <p class="text-white/20 uppercase tracking-[1em] text-[10px] mt-4">NexaFlow Neural Link</p>
+                <p class="text-white/20 uppercase tracking-[1em] text-[10px] mt-4">SIC Corp Secure Link</p>
             </div>
             
             <div class="absolute bottom-10 flex gap-4">
-                <button id="btn-select" class="px-6 py-3 bg-white/5 rounded-full text-[10px] font-bold uppercase border border-white/10 hover:bg-white/10 transition-all">Select</button>
-                <button id="btn-add" class="w-14 h-14 bg-sky-500 rounded-full flex items-center justify-center text-black text-2xl font-bold shadow-lg shadow-sky-500/20 hover:scale-110 transition-all">+</button>
-                <button id="btn-delete" class="px-6 py-3 bg-red-500/10 text-red-500 rounded-full text-[10px] font-bold uppercase border border-red-500/20 hover:bg-red-500/20 transition-all">Delete</button>
+                <button id="btn-select" class="px-6 py-3 bg-white/5 rounded-full text-[10px] font-bold uppercase border border-white/10 hover:bg-white/10">Select</button>
+                <button id="btn-add" class="w-14 h-14 bg-sky-500 rounded-full flex items-center justify-center text-black text-2xl font-bold hover:scale-110 transition-all">+</button>
+                <button id="btn-delete" class="px-6 py-3 bg-red-500/10 text-red-500 rounded-full text-[10px] font-bold uppercase border border-red-500/20 hover:bg-red-500/20">Delete</button>
             </div>
         </main>
     </div>
@@ -63,10 +71,10 @@
     <div id="configModal" class="fixed inset-0 bg-black/80 backdrop-blur-xl flex items-center justify-center hidden z-[100]">
         <div class="bg-[#0a0a0a] border border-white/10 p-10 rounded-[3rem] w-[400px]">
             <h2 class="text-2xl font-black uppercase italic mb-6">Settings</h2>
-            <input id="cfgName" placeholder="Update Display Name" class="w-full bg-white/5 border border-white/10 p-4 rounded-xl mb-4 text-white outline-none focus:border-sky-500">
+            <input id="cfgName" placeholder="Update Name" class="w-full bg-white/5 border border-white/10 p-4 rounded-xl mb-4 text-white outline-none focus:border-sky-500">
             <button id="commitBtn" class="w-full bg-sky-500 text-black font-black p-4 rounded-xl text-xs uppercase mb-3">Save Changes</button>
-            <button id="logoutBtn" class="w-full bg-red-500/10 text-red-500 border border-red-500/20 font-black p-4 rounded-xl text-[10px] uppercase hover:bg-red-500 hover:text-white transition-all">Logout Session</button>
-            <button id="closeConfig" class="w-full text-white/20 text-[10px] mt-4 uppercase font-bold">Close Window</button>
+            <button id="logoutBtn" class="w-full bg-red-500/10 text-red-500 border border-red-500/20 font-black p-4 rounded-xl text-[10px] uppercase hover:bg-red-600 hover:text-white transition-all">Logout</button>
+            <button id="closeConfig" class="w-full text-white/20 text-[10px] mt-4 uppercase font-bold text-center">Close</button>
         </div>
     </div>
 
