--- a/index.html
+++ b/index.html
@@ -8,73 +8,84 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython_stdlib.min.js"></script>
     <style>
-        body { background: #010409; color: white; font-family: sans-serif; overflow: hidden; margin: 0; }
-        #boot-screen, #login-screen { position: fixed; inset: 0; background: black; z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; transition: opacity 0.3s ease; }
-        #login-screen { z-index: 9998; background: #010409; }
-        .boot-loader { width: 30px; height: 30px; border: 2px solid #38bdf822; border-top-color: #38bdf8; border-radius: 50%; animation: spin 0.8s linear infinite; }
-        @keyframes spin { to { transform: rotate(360deg); } }
+        body { background: #010409; color: white; font-family: 'Inter', sans-serif; overflow: hidden; }
+        .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.05); }
+        #boot-screen, #auth-screen { position: fixed; inset: 0; background: black; z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; }
+        #auth-screen { z-index: 9998; background: radial-gradient(circle at center, #020617 0%, #000 100%); }
         .hidden { display: none !important; }
+        ::-webkit-scrollbar { width: 4px; }
+        ::-webkit-scrollbar-thumb { background: #38bdf8; border-radius: 10px; }
+        .admin-glow { box-shadow: 0 0 20px rgba(56, 189, 248, 0.2); border-color: rgba(56, 189, 248, 0.5) !important; }
     </style>
 </head>
 <body onload="brython()">
 
     <div id="boot-screen">
-        <div class="boot-loader mb-4"></div>
-        <p class="text-[10px] tracking-[0.4em] uppercase text-sky-400 font-bold">SIC Turbo Boot</p>
+        <div class="w-10 h-10 border-2 border-sky-500 border-t-transparent rounded-full animate-spin mb-4"></div>
+        <p class="text-[10px] tracking-[0.5em] uppercase text-sky-400 font-bold">Initialising Mobby...</p>
     </div>
 
-    <div id="login-screen" class="hidden">
-        <div class="w-80 text-center">
-            <h2 class="text-3xl font-black italic mb-6">MobbyOS LOGIN</h2>
-            <input id="loginUser" placeholder="Username" class="w-full bg-white/5 border border-white/10 p-4 rounded-xl mb-3 outline-none focus:border-sky-500">
-            <button id="entryBtn" class="w-full bg-sky-500 text-black font-black p-4 rounded-xl text-xs uppercase">Enter System</button>
+    <div id="auth-screen" class="hidden">
+        <div class="glass p-12 rounded-[3rem] w-[450px] text-center border-sky-500/20 shadow-2xl">
+            <h2 class="text-4xl font-black italic mb-2 tracking-tighter">MobbyOS</h2>
+            <p class="text-[10px] text-white/40 uppercase tracking-widest mb-8 text-sky-400">Identity Verification</p>
+            
+            <div class="space-y-4 text-left">
+                <input id="auth-user" placeholder="Display Name" class="w-full bg-white/5 border border-white/10 p-5 rounded-2xl outline-none focus:border-sky-500 transition-all font-bold">
+                <input id="auth-email" type="email" placeholder="SIC or Personal Email" class="w-full bg-white/5 border border-white/10 p-5 rounded-2xl outline-none focus:border-sky-500 transition-all font-bold">
+                <button id="auth-btn" class="w-full bg-sky-500 text-black font-black p-5 rounded-2xl text-xs uppercase hover:bg-sky-400 transition-all shadow-lg shadow-sky-500/20">Access Neural Link</button>
+            </div>
+            <p class="mt-6 text-[9px] text-white/20 uppercase font-bold">Property of SIC Corp & NexaFlow</p>
         </div>
     </div>
 
-    <div class="flex h-screen w-screen">
-        <aside class="w-64 bg-black border-r border-white/5 p-6 flex flex-col">
-            <div class="flex items-center gap-3 mb-10">
-                <img id="sidePFP" src="https://i.imgur.com/r6oJp4O.png" class="w-10 h-10 rounded-xl">
+    <div class="flex h-screen w-screen overflow-hidden">
+        <aside class="w-72 bg-black border-r border-white/5 p-6 flex flex-col">
+            <div id="role-card" class="flex items-center gap-4 mb-10 p-2 glass rounded-2xl border border-transparent transition-all">
+                <img id="sidePFP" src="https://i.imgur.com/r6oJp4O.png" class="w-12 h-12 rounded-xl border border-white/10">
                 <div>
-                    <p id="sideName" class="text-xs font-bold uppercase">Guest</p>
-                    <p id="userRole" class="text-[8px] text-sky-400 font-bold uppercase tracking-widest">Authorized</p>
+                    <p id="sideName" class="text-xs font-black uppercase tracking-tight text-sky-400">Pending...</p>
+                    <p id="userRole" class="text-[7px] text-white/40 uppercase font-bold tracking-widest leading-none mt-1 bg-white/5 px-2 py-1 rounded">Scanning...</p>
                 </div>
             </div>
-            <nav class="space-y-2 flex-grow">
-                <button id="btn-dash" class="w-full text-left p-3 text-[10px] font-bold uppercase text-white/40 hover:bg-white/5 rounded-xl transition-all">Dashboard</button>
-                <button id="btn-history" class="w-full text-left p-3 text-[10px] font-bold uppercase text-white/40 hover:bg-white/5 rounded-xl transition-all">History</button>
-                <button id="btn-config" class="w-full text-left p-3 text-[10px] font-bold uppercase text-white/40 hover:bg-white/5 rounded-xl transition-all">Settings</button>
+
+            <p class="text-[9px] font-black text-white/20 uppercase mb-4 px-2">Conversation Vault</p>
+            <div id="history-list" class="flex-grow overflow-y-auto space-y-1 mb-6 px-1"></div>
+
+            <nav class="space-y-2 mt-auto">
+                <button id="btn-config" class="w-full flex items-center gap-3 p-4 text-[10px] font-bold uppercase text-white/40 hover:bg-white/5 rounded-2xl transition-all group">
+                    <span id="status-dot" class="w-2 h-2 rounded-full bg-red-500"></span> OS Settings
+                </button>
             </nav>
-            <div class="p-4 bg-white/5 rounded-2xl border border-white/5">
-                <div class="flex items-center gap-2 mb-1">
-                    <div id="statusDot" class="w-1.5 h-1.5 bg-red-500 rounded-full"></div>
-                    <p class="text-[8px] font-bold text-white/30 uppercase">Engine</p>
-                </div>
-                <p id="mobbyStatus" class="text-[9px] font-bold uppercase italic">Offline</p>
-            </div>
         </aside>
 
-        <main class="flex-grow bg-[#020617] relative flex flex-col items-center justify-center">
-            <div id="view-dashboard" class="p-20 text-center">
-                <h1 id="welcomeMsg" class="text-6xl font-black italic tracking-tighter min-h-[80px]"></h1>
-                <p class="text-white/20 uppercase tracking-[1em] text-[10px] mt-4">SIC Corp Secure Link</p>
+        <main class="flex-grow bg-[#020617] relative flex flex-col">
+            <div class="flex-grow flex flex-col items-center justify-center text-center">
+                <h1 id="welcomeMsg" class="text-7xl font-black italic tracking-tighter text-white drop-shadow-2xl min-h-[1.2em]"></h1>
+                <p id="modeDesc" class="text-white/10 uppercase tracking-[1.5em] text-[10px] mt-6 font-black italic">Neural Link Offline</p>
             </div>
             
-            <div class="absolute bottom-10 flex gap-4">
-                <button id="btn-select" class="px-6 py-3 bg-white/5 rounded-full text-[10px] font-bold uppercase border border-white/10 hover:bg-white/10">Select</button>
-                <button id="btn-add" class="w-14 h-14 bg-sky-500 rounded-full flex items-center justify-center text-black text-2xl font-bold hover:scale-110 transition-all">+</button>
-                <button id="btn-delete" class="px-6 py-3 bg-red-500/10 text-red-500 rounded-full text-[10px] font-bold uppercase border border-red-500/20 hover:bg-red-500/20">Delete</button>
+            <div class="p-10 flex items-center justify-center gap-6">
+                <button id="btn-select" class="glass px-8 py-4 rounded-full text-[10px] font-black uppercase text-white/40 hover:text-white transition-all">Select</button>
+                <button id="btn-add" class="w-16 h-16 bg-sky-500 rounded-full flex items-center justify-center text-black text-3xl font-bold shadow-2xl shadow-sky-500/40 hover:scale-110 active:scale-95 transition-all">+</button>
+                <button id="btn-delete" class="glass px-8 py-4 rounded-full text-[10px] font-black uppercase text-red-500/60 hover:text-red-500 transition-all">Purge</button>
             </div>
         </main>
     </div>
 
-    <div id="configModal" class="fixed inset-0 bg-black/80 backdrop-blur-xl flex items-center justify-center hidden z-[100]">
-        <div class="bg-[#0a0a0a] border border-white/10 p-10 rounded-[3rem] w-[400px]">
-            <h2 class="text-2xl font-black uppercase italic mb-6">Settings</h2>
-            <input id="cfgName" placeholder="Update Name" class="w-full bg-white/5 border border-white/10 p-4 rounded-xl mb-4 text-white outline-none focus:border-sky-500">
-            <button id="commitBtn" class="w-full bg-sky-500 text-black font-black p-4 rounded-xl text-xs uppercase mb-3">Save Changes</button>
-            <button id="logoutBtn" class="w-full bg-red-500/10 text-red-500 border border-red-500/20 font-black p-4 rounded-xl text-[10px] uppercase hover:bg-red-600 hover:text-white transition-all">Logout</button>
-            <button id="closeConfig" class="w-full text-white/20 text-[10px] mt-4 uppercase font-bold text-center">Close</button>
+    <div id="configModal" class="fixed inset-0 bg-black/90 backdrop-blur-2xl flex items-center justify-center hidden z-[1000]">
+        <div class="glass p-12 rounded-[4rem] w-[500px] border-white/10">
+            <h2 class="text-3xl font-black uppercase italic mb-8 tracking-tighter text-sky-400 text-center">System Config</h2>
+            <div class="space-y-6">
+                <div>
+                    <label class="text-[10px] uppercase font-black text-white/30 ml-2 mb-2 block">Active Email</label>
+                    <p id="displayEmail" class="p-4 bg-white/5 rounded-2xl text-xs font-mono text-white/60 border border-white/5"></p>
+                </div>
+                <div class="flex gap-4">
+                    <button id="logoutBtn" class="w-full bg-red-500/10 text-red-500 border border-red-500/20 p-5 rounded-2xl text-[10px] font-black uppercase hover:bg-red-500 hover:text-white transition-all">Kill Session</button>
+                </div>
+            </div>
+            <button id="closeConfig" class="w-full text-white/20 text-[10px] mt-8 uppercase font-bold text-center">Exit Menu</button>
         </div>
     </div>
 
