--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MobbyOS V3.0.1 | SIC Corp</title>
 
+<!-- Tailwind CSS -->
 <script src="https://cdn.tailwindcss.com"></script>
-<script src="SICryption.js"></script>
+
+<!-- Brython -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython_stdlib.min.js"></script>
 
@@ -15,14 +17,17 @@
 <script src="https://www.gstatic.com/firebasejs/9.31.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.31.0/firebase-database-compat.js"></script>
 
+<!-- Fonts & Styles -->
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<script src="config.js"></script>
+
+<!-- Custom Scripts -->
+<script src="SICryption.js"></script>
 <script src="auth.js"></script>
 </head>
-<body onload="brython(); initSICAccountSystem(); checkFork();" data-sic-secure="true">
+<body onload="brython(); checkFork();" data-sic-secure="true">
 
-<!-- SICAccountSystem -->
+<!-- SIC Account Setup -->
 <div id="sic-setup-screen" class="fixed inset-0 bg-black z-[40000] flex items-center justify-center p-6 transition-all duration-700 ease-in-out">
     <div class="glass p-12 rounded-[3.5rem] w-full max-w-[500px] text-center border-white/5 shadow-2xl transform transition-all duration-500 hover:scale-105">
         <h2 class="text-4xl font-black italic mb-2 tracking-tighter">SIC <span class="text-sky-500">Account</span></h2>
@@ -37,7 +42,7 @@
 </div>
 
 <!-- Main UI -->
-<div class="flex h-screen w-screen bg-black overflow-hidden hidden" id="main-ui">
+<div id="main-ui" class="flex h-screen w-screen bg-black overflow-hidden hidden">
     <aside class="w-72 border-r border-white/5 p-6 flex flex-col z-20 bg-black transition-all duration-500 ease-in-out">
         <h2 class="text-2xl font-black italic mb-10 tracking-tighter px-2">MOBBY<span class="text-sky-500">OS</span></h2>
         <nav class="space-y-2 flex-grow">
@@ -76,14 +81,10 @@
     </main>
 </div>
 
-<!-- Brython + Python Engines -->
+<!-- Brython Python Engines -->
 <script type="text/python" src="SICryption.py"></script>
 <script type="text/python" src="buttonsresponder.py"></script>
 <script type="text/python" src="engine.py"></script>
-
-<!-- Auth Scripts -->
-<script src="config.js"></script>
-<script src="auth.js"></script>
 
 </body>
 </html>
